tests/macros/confirm/validate.stderr
error: option `validate` does not exist for kind `confirm`
 --> $DIR/validate.rs:2:45
  |
2 |     let q = requestty::questions![Confirm { validate: todo!() }];
  |                                             ^^^^^^^^
