tests/macros/confirm/validate.rs
fn main() {
    let q = requestty::questions![Confirm { validate: todo!() }];
}
